--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <ul>
                 <li><a href="/index.html" style="border-bottom: solid 2px white; opacity: 1;">ホーム</a></li>
                 <li><a href="lowpages/what_sNDF.html">中河内障がいフォーラムとは</a></li>
-                <li><a href="../act/2020.html">取組みと活動</a></li>
+                <li><a href="act/2020.html">取組みと活動</a></li>
                 <li><a href="lowpages/member.html">構成団体・メンバー</a></li>
                 <li><a href="lowpages/contact.html">お問い合わせ</a></li>
             </ul>
@@ -88,7 +88,7 @@
                     <a href="index.html">
                         <li>ホーム</li>
                     </a>
-                    <a href="../act/2020.html">
+                    <a href="act/2020.html">
                         <li>取組みと活動</li>
                     </a>
                     <a href="lowpages/what_sNDF.html"></a>
@@ -229,11 +229,11 @@
                     <h5>取組みと活動</h5>
                     <hr>
                     <ul style="list-style: none;">
-                        <li><a href="../act/2020.html">2020年度</a></li>
-                        <li><a href="/act/2019.html">2019年度</a></li>
-                        <li><a href="/act/yet.html">2018年度</a></li>
-                        <li><a href="/act/yet.html">2017年度</a></li>
-                        <li><a href="/act/yet.html">2016年度</a></li>
+                        <li><a href="act/2020.html">2020年度</a></li>
+                        <li><a href="act/2019.html">2019年度</a></li>
+                        <li><a href="act/yet.html">2018年度</a></li>
+                        <li><a href="act/yet.html">2017年度</a></li>
+                        <li><a href="act/yet.html">2016年度</a></li>
                     </ul>
                 </div>
 
