--- a/act/2019.html
+++ b/act/2019.html
@@ -114,40 +114,40 @@
             <div class="col-12">
                 <section id=Act_Year>
                     <ul class="Act_Year_flex">
-                        <a href="/act/2020.html">
+                        <a href="2020.html">
                             <li>2020年度</li>
                         </a>
-                        <a href="/act/2019.html">
+                        <a href="2019.html">
                             <li>2019年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2018年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2017年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2016年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2015年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2014年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2013年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2012年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2011年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2010年度</li>
                         </a>
-                        <a href="/act/yet.html">
+                        <a href="yet.html">
                             <li>2009年度</li>
                         </a>
                     </ul>
@@ -287,10 +287,10 @@
                     <h5>ホーム</h5>
                     <hr>
                     <ul style="list-style: none;">
-                        <li><a href="index.html#A">新着情報</a></li>
-                        <li><a href="index.html#B">最近の活動</a></li>
-                        <li><a href="index.html#C">中河内障がいフォーラムについて</a></li>
-                        <li><a href="index.html#D">障害フォーラムについて</a></li>
+                        <li><a href="../index.html#A">新着情報</a></li>
+                        <li><a href="../index.html#B">最近の活動</a></li>
+                        <li><a href="../index.html#C">中河内障がいフォーラムについて</a></li>
+                        <li><a href="../index.html#D">障害フォーラムについて</a></li>
                     </ul>
                 </div>
 
@@ -298,9 +298,9 @@
                     <h5>中河内障がいフォーラムとは</h5>
                     <hr>
                     <ul style="list-style: none;">
-                        <li><a href="/lowpages/what_sNDF.html#A">略歴</a></li>
-                        <li><a href="/lowpages/what_sNDF.html#B">JDFとは</a></li>
-                        <li><a href="/lowpages/what_sNDF.html#C">ODFとは</a></li>
+                        <li><a href="../lowpages/what_sNDF.html#A">略歴</a></li>
+                        <li><a href="../lowpages/what_sNDF.html#B">JDFとは</a></li>
+                        <li><a href="../lowpages/what_sNDF.html#C">ODFとは</a></li>
                     </ul>
                 </div>
 
@@ -308,11 +308,11 @@
                     <h5>取組みと活動</h5>
                     <hr>
                     <ul style="list-style: none;">
-                        <li><a href="/act/2020.html">2020年度</a></li>
-                        <li><a href="/act/2019.html">2019年度</a></li>
-                        <li><a href="/act/yet.html">2018年度</a></li>
-                        <li><a href="/act/yet.html">2017年度</a></li>
-                        <li><a href="/act/yet.html">2016年度</a></li>
+                        <li><a href="2020.html">2020年度</a></li>
+                        <li><a href="2019.html">2019年度</a></li>
+                        <li><a href="yet.html">2018年度</a></li>
+                        <li><a href="yet.html">2017年度</a></li>
+                        <li><a href="yet.html">2016年度</a></li>
                     </ul>
                 </div>
 
@@ -320,14 +320,14 @@
                     <h5>構成団体・メンバー</h5>
                     <hr>
                     <ul style="list-style: none;">
-                        <li><a href="/lowpages/member.html">構成団体</a></li>
-                        <li><a href="/lowpages/member.html">メンバー</a></li>
+                        <li><a href="../lowpages/member.html">構成団体</a></li>
+                        <li><a href="../lowpages/member.html">メンバー</a></li>
                     </ul>
                     <br>
                     <h5>お問い合わせ</h5>
                     <hr>
                     <ul style="list-style: none;">
-                        <li><a href="/lowpages/contact.html">お問い合わせ先</a></li>
+                        <li><a href="../lowpages/contact.html">お問い合わせ先</a></li>
                     </ul>
                 </div>
             </div>
