--- a/lowpages/what_sNDF.html
+++ b/lowpages/what_sNDF.html
@@ -36,7 +36,7 @@
               <ul>
                 <li><a href="../index.html">ホーム</a></li>
                 <li><a href="/lowpages/what_sNDF.html" style="border-bottom: solid 2px white; opacity: 1;">中河内障がいフォーラムとは</a></li>
-                <li><a href="/act/2020.html">取組みと活動</a></li>
+                <li><a href="../act/2020.html">取組みと活動</a></li>
                 <li><a href="../lowpages/member.html">構成団体・メンバー</a></li>
                 <li><a href="../lowpages/contact.html">お問い合わせ</a></li>
               </ul>
@@ -69,7 +69,7 @@
     
               <ul>
                 <a href="../index.html"><li>ホーム</li></a>
-                <a href="/act/2020.html"><li>取組みと活動</li></a>
+                <a href="../act/2020.html"><li>取組みと活動</li></a>
                 <a href="/lowpages/what_sNDF.html"><li>中河内障がいフォーラムとは</li></a>
                 <a href="../lowpages/member.html"><li>構成団体・メンバー</li></a>
                 <a href="../lowpages/contact.html"><li>お問い合わせ</li></a>
@@ -164,10 +164,10 @@
               <h5>ホーム</h5>
               <hr>
               <ul style="list-style: none;">
-                <li><a href="/index.html#A">新着情報</a></li>
-                <li><a href="/index.html#B">最近の活動</a></li>
-                <li><a href="/index.html#C">中河内障がいフォーラムについて</a></li>
-                <li><a href="/index.html#D">障害フォーラムについて</a></li>
+                <li><a href="../index.html#A">新着情報</a></li>
+                <li><a href="../index.html#B">最近の活動</a></li>
+                <li><a href="../index.html#C">中河内障がいフォーラムについて</a></li>
+                <li><a href="../index.html#D">障害フォーラムについて</a></li>
             </ul>
           </div>
 
@@ -175,9 +175,9 @@
               <h5>中河内障がいフォーラムとは</h5>
               <hr>
               <ul style="list-style: none;">
-                  <li><a href="/lowpages/what_sNDF.html#A">略歴</a></li>
-                  <li><a href="/lowpages/what_sNDF.html#B">JDFとは</a></li>
-                  <li><a href="/lowpages/what_sNDF.html#C">ODFとは</a></li>
+                  <li><a href="what_sNDF.html#A">略歴</a></li>
+                  <li><a href="what_sNDF.html#B">JDFとは</a></li>
+                  <li><a href="what_sNDF.html#C">ODFとは</a></li>
               </ul>
           </div>
 
@@ -185,11 +185,11 @@
               <h5>取組みと活動</h5>
               <hr>
               <ul style="list-style: none;">
-                  <li><a href="/act/2020.html">2020年度</a></li>
-                  <li><a href="/act/2019.html">2019年度</a></li>
-                  <li><a href="/act/yet.html">2018年度</a></li>
-                  <li><a href="/act/yet.html">2017年度</a></li>
-                  <li><a href="/act/yet.html">2016年度</a></li>
+                  <li><a href="../act/2020.html">2020年度</a></li>
+                  <li><a href="../act/2019.html">2019年度</a></li>
+                  <li><a href="../act/yet.html">2018年度</a></li>
+                  <li><a href="../act/yet.html">2017年度</a></li>
+                  <li><a href="../act/yet.html">2016年度</a></li>
               </ul>
           </div>
 
@@ -197,14 +197,14 @@
               <h5>構成団体・メンバー</h5>
               <hr>
               <ul style="list-style: none;">
-                  <li><a href="/lowpages/member.html">構成団体</a></li>
-                  <li><a href="/lowpages/member.html">メンバー</a></li>
+                  <li><a href="member.html">構成団体</a></li>
+                  <li><a href="member.html">メンバー</a></li>
               </ul>
               <br>
               <h5>お問い合わせ</h5>
               <hr>
               <ul style="list-style: none;">
-                  <li><a href="/lowpages/contact.html">お問い合わせ先</a></li>
+                  <li><a href="contact.html">お問い合わせ先</a></li>
               </ul>
           </div>
       </div>
