スマホナビ、パスの修正

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <a href="act/2020.html">
                         <li>取組みと活動</li>
                     </a>
-                    <a href="lowpages/what_sNDF.html"></a>
+                    <a href="lowpages/what_sNDF.html">
                         <li>中河内障がいフォーラムとは</li>
                     </a>
                     <a href="lowpages/member.html">
