footerのパス修正

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                     <h5>中河内障がいフォーラムとは</h5>
                     <hr>
                     <ul style="list-style: none;">
-                        <li><a href="/lowpages/what_sNDF.html#A">略歴</a></li>
-                        <li><a href="/lowpages/what_sNDF.html#B">JDFとは</a></li>
-                        <li><a href="/lowpages/what_sNDF.html#C">ODFとは</a></li>
+                        <li><a href="lowpages/what_sNDF.html#A">略歴</a></li>
+                        <li><a href="lowpages/what_sNDF.html#B">JDFとは</a></li>
+                        <li><a href="lowpages/what_sNDF.html#C">ODFとは</a></li>
                     </ul>
                 </div>
 
@@ -241,8 +241,8 @@
                     <h5>構成団体・メンバー</h5>
                     <hr>
                     <ul style="list-style: none;">
-                        <li><a href="/lowpages/member.html">構成団体</a></li>
-                        <li><a href="/lowpages/member.html">メンバー</a></li>
+                        <li><a href="lowpages/member.html">構成団体</a></li>
+                        <li><a href="lowpages/member.html">メンバー</a></li>
                     </ul>
                     <br>
                     <h5>お問い合わせ</h5>
