footerのパス修正２

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <h5>お問い合わせ</h5>
                     <hr>
                     <ul style="list-style: none;">
-                        <li><a href="/lowpages/contact.html">お問い合わせ先</a></li>
+                        <li><a href="lowpages/contact.html">お問い合わせ先</a></li>
                     </ul>
                 </div>
             </div>
