--- a/act/2020.html
+++ b/act/2020.html
@@ -189,7 +189,7 @@
  <!-- ２部構成の時 -->
  <div class="text-box">
   <div class="text">
-    <small>2019.08.28 fri</small>
+    <small>2020.10.16 fri</small>
     <h4>差別解消法について考えるⅥ</h4>
     <!-- <h5>~65歳問題について考える~</h5> -->
     <p>第１部「障がい当事者が考える人権問題」</p>
@@ -223,11 +223,11 @@
     <div class="button">
       <!-- 資料はここ -->
       
-      <!-- <button>
-          <a class="button-a" href="https://drive.google.com/file/d/1eeGSgYxK2GCpeN4xAg_KANXLS36xtao1/view?usp=sharing" target="_blank" rel="noopener noreferrer">
+      <button>
+          <a class="button-a" href="https://drive.google.com/file/d/11KMeckq4BJnvYtY7-F5gVfgGcWPAlweG/view" target="_blank" rel="noopener noreferrer">
             <img class="icon" src="https://drive-thirdparty.googleusercontent.com/16/type/application/pdf">資料を見てみる
           </a>
-        </button> -->
+        </button>
     </div>
   </div>
 </div>
